--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img src="SharedScreenshot (2).jpg" alt="random image">
     <h1>chuka stuff</h1>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et iste velit
     porro quaerat, nemo modi sit eum unde accusamus cum officia temporibus neque
-    maxime perspiciatis quibusdam facere dolore consequuntur ullam. Lorem ipsum
+    maxime perspiciatis
+    quibusdam facere dolore consequuntur ullam. Lorem ipsum
     dolor sit, amet consectetur adipisicing elit. Nesciunt repellat voluptatibus
     eius totam est dolore ratione perferendis dolor libero porro nisi, nobis
     consectetur, sequi animi neque vero reiciendis ipsa ipsum! Lorem ipsum dolor
     sit amet consectetur adipisicing elit. Voluptate architecto soluta ut,
     cumque nostrum suscipit placeat, iste quaerat quasi fugit cupiditate ex.
     Molestiae deleniti dignissimos culpa, sint tenetur cum perspiciatis?
+    <h1>the end</h1>
   </body>
 </html>
